WR 349708 2 Theme design (colour contrast issue) (#53)
Fix for help icon color in pageheader.
Fix for Page completion icons having an underline.

behatnotneeded

--- a/htdocs/theme/pcnz/sass/layout/_header.scss
+++ b/htdocs/theme/pcnz/sass/layout/_header.scss
@@ -21,3 +21,9 @@
         }
     }
 }
+
+.pageheader {
+    span.help .icon {
+        color: $theme-text-midtone-color;
+    }
+}
